# rtsp2webrtc

./: AGENTS.md  BUGFIX.md  Cargo.toml  README.md  README_EN.md  config.toml  剩余任务.txt
.claude/: settings.local.json
docs/: architecture.md  constraints.md  media-pipeline.md  performance.md  roadmap.md  webrtc.md
patches/webrtc-dtls/: .cargo_vcs_info.json  Cargo.toml
patches/webrtc-dtls/src/: state.rs
src/: api.rs  config.rs  error.rs  main.rs  rtp_relay.rs  rtsp.rs  signaling.rs  stream.rs  webrtc_peer.rs
web/: index.html
