[package]
name = "rtsp2webRTC"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
webrtc = "0.12"
retina = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures-util = "0.3"
rtp = "0.12"
webrtc-util = "0.10"
url = "2"
base64 = "0.22"
toml = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }

[patch.crates-io]
webrtc-dtls = { path = "patches/webrtc-dtls" }

